Part14/Q.1/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tier: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: web
  template:
    metadata:
      labels:
        tier: web
    spec:
      containers:
      - image: praqma/network-multitool
        name: nginx
